--- a/language/Cargo.toml
+++ b/language/Cargo.toml
@@ -7,4 +7,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-libipld = "0.11.0"
+libipld = "0.12.0"
+libipld-core = "0.12.0"
+anyhow = "1.0.13"
